style.css
body{
    background-image: url(imgs/background.png);
    background-repeat: no-repeat;
    background-size: cover;
    align-items: center;
    text-align: center;
    overflow-x: hidden;
}
.a{
    display: flex;
    align-items: center;
    justify-content: center;
}
.kbc{
    display: block;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
    background:black;
    position: static;
    width: auto;
    top: 0;
    height: 90%;
    align-items: center;
    padding-left: 10px;
    border: 10px;
    padding-top: .25%;
    
    margin: -10px -7.5px 0 -10px;
    z-index: 9;
    color: whitesmoke;
    margin-bottom: 50px;
    
}
.kbc img{
    height: 60px;
    width: 20px 5px;
    border-radius: 50%;
    background-color: whitesmoke;
    padding-right: 15px;
    top: 20%;
    border: 10px;
    z-index: 10;
}

.kbc > .naav{
    background-image:linear-gradient(to bottom,rgba(92, 92, 92), rgb(68, 68, 68) 90%);
    width: auto;
    margin-left: -10px;
    text-align: center;
    align-items: center;

}



.links{
    color: rgba(255, 255, 255, 0.89);
    text-decoration: none;
    
}

.sky {
    position: absolute;
    width: 100vw;
    height: 100vh;
    z-index: -1;
  }

  .star {
    position: absolute;
    background: white;
    border-radius: 50%;
    opacity: 0.8;
    animation: twinkle 2s infinite ease-in-out;
    transition: box-shadow 0.5s ease-in-out;
  }
  
  @keyframes twinkle {
    0%, 100% {
      opacity: 0.2;
      transform: scale(1);
      box-shadow: 0 0 0px white;
    }
    50% {
      opacity: 1;
      transform: scale(1.3);
      box-shadow:
        0 0 8px 2px white,
        0 0 12px 4px white;
    }
  }

  .shooting-star {
    position: absolute;
    width: 2px;
    height: 80px;
    background: linear-gradient(white, transparent);
    opacity: 0;
    transform: rotate(45deg);
    animation: shoot 1s linear forwards;
  }
  
  @keyframes shoot {
    0% {
      opacity: 1;
      transform: translate(0, 0) rotate(45deg);
    }
    100% {
      opacity: 0;
      transform: translate(-200px, 200px) rotate(45deg);
    }
  }
  
  








.campo{
    
    font-weight: 100;
    font-size: 15px;
    position:relative;

    margin: 0 0 10% 0;
    padding: 30px;
    border-radius: 15px;
    width: 80%;

}





.textobuxa{
    display: flex;
    flex-direction:column;
    background-color: rgba(245, 245, 245, 0.63);
    border-radius: 5px;
    padding: 1%;
    font-size: 20px;
    box-shadow: 8px 8px 11px black;

    
}

nav ul{
    list-style-type: none;
    display: inline;
    margin-left: -10%;
}
.li-link{
    display:inline;
    padding-inline:0px;
    margin: 5px;
}
nav{
    margin: auto;
    text-align: center;
}

.containerbrabo{
    display: flex;
    align-content: space-between;

    flex-flow:row wrap;

}
.projeto{
    background-color: rgba(245, 245, 245, 0.63);
    border-radius: 5px;
    margin:1%;
    flex:1;
    text-decoration: none;
    padding: 10px;
    min-width: 40%;

}

.containerbrabo div{
    box-shadow: 8px 8px 11px black;
}


.projeto > a{
    text-decoration: none;
    color: purple;
}


.eukk{
    display: flex;
    flex-direction: row;    
    align-items: center;
    justify-content: center;
    gap: 10%;


}
.textobuxa, .containerbrabo div, .eukk div {
    transition: transform 250ms ease-in-out; /* Isso cria uma transição mais suave */
}

.textobuxa:hover, .containerbrabo div:hover, .eukk div:hover {
    transform: scale(1.1);
}




.eukk > div{
    background-color: rgba(245, 245, 245, 0.63);
    border-radius: 5px;
    margin: 1%;
    padding: 0 5% 5% 5%;

    box-shadow: 8px 8px 11px black;
}

.pe{
    padding-left: 9.4%;
    background-color: black;
    position: absolute;
    margin-left: -10%;
    height: fit-content;
    color: rgba(245, 245, 245, 0.63);
    text-align: center;
    align-items: center;
    width: 100%;
    
}
.pe > .li-link > a{
    font-size: 200px;
}

/* Malditos celulares me dando trabalho */

/* 🌐 Estilos responsivos para telas menores que 768px */
@media (max-width: 768px) {
    header.kbc {
      flex-direction: column;
      text-align: center;
    }
  
    .ul-links {
      flex-direction: column;
      padding: 0;
    }
  
    .li-link {
      margin: 10px 0;
    }
  
    .eukk {
      flex-direction: column;
      align-items: center;
    }
  
    .hard, .soft, .tecno {
      width: 90%;
      margin-bottom: 20px;
    }
  
    .textobuxa {
      flex-direction: column !important;
      align-items: center;
      text-align: center;
    }
  
    .textobuxa img {
      float: none !important;
      margin-top: 10px;
    }
  
    .containerbrabo {
      flex-direction: column;
      align-items: center;
    }
  
    .projeto {
      width: 90%;
      margin: 20px 0;
    }
  
    .campo {
      padding: 10px;
    }
  
    footer.pe {
      text-align: center;
    }
  
    footer.pe ul {
      flex-direction: column;
      padding: 0;
    }
  
    footer.pe li {
      margin-bottom: 10px;
    }
  }
  

